2011-12-30  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (counter_k): New keyword symbol variable.
	(do_output_line): Process new :counter argument of rep.
	(do_output): Ditto, for repeat.
	(syms_init): Intern new keyword symbol.

	* match.h (counter_k): Declared.

	* parser.l (REPEAT, REP): Lexical syntax changed to
	allow arguments.

	* parser.y (repeat_rep_helper): Takes extra argument, representing
	the repeat/rep args. This is inserted into the second position
	of the output list.
	(repeat_clause, rep_elem): Extract repeat/rep arguments and
	pass to repeat_rep_helper.
	(yybadtoken): Do not put quotes around the word "number".

	* txr.1: Updated.

2011-12-29  Kaz Kylheku  <kaz@kylheku.com>

	New functionality: mod and modlast directives in repeat and rep.

	* eval.c (eval_init): Use new symbol variable mod_s instead
	of calling intern.

	* match.c (mod_s, modlast_s): Symbol variables defined.
	(do_output_line): mod and modlast directives implemented under rep.
	(do_output): likewise under repeat.
	(syms_init): Initialize new symbol variables.

	* match.h (mod_s, modlast_s): Declared.

	* parser.l (MOD, MODLAST): Parse new token types.

	* parser.y (MOD, MODLAST): New tokens.
	(repeat_parts_opt, rep_parts_opt): New syntax.
	(repeat_rep_helper): Handle mod and modlast syntax.

	* txr.1: Updated.

	* txr.vim: Updated.

2011-12-29  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (repeat_rep_helper): Bugfix. Circular lists
	were being created here when clauses of the same kind appear multiple
	times. The problem is that append2 no longer copies the second list,
	which the code was relying on it to do.

2011-12-29  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Useless sentence under reduce-left and reduce-right removed.
	Missing Description headings added.

2011-12-28  Kaz Kylheku  <kaz@kylheku.com>

	* genman.txr: Updated for recent man page changes.

2011-12-28  Kaz Kylheku  <kaz@kylheku.com>

	Version 51

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.
